Ctrl D and Del can be used to delete selected items in LCV

--- a/PSS/PSS/Shared/LibraryContentViewer.razor
+++ b/PSS/PSS/Shared/LibraryContentViewer.razor
@@ -153,7 +153,7 @@ else
 {
 	<CtrlGInput @ref=@ctrlGInput StartDateChanged="@StartDateChanged"/>
 }
-<KeyboardShortcuts AltS="@AltSFired"/>
+<KeyboardShortcuts AltS="@AltSFired" CtrlD="@DelOrCtrDFired" Del="@DelOrCtrDFired"/>
 
 @code{
 	CtrlGInput ctrlGInput;
