Remove 2 uselsss KeebShortcuts parameters in LCV

--- a/PSS/PSS/Shared/LibraryContentViewer.razor
+++ b/PSS/PSS/Shared/LibraryContentViewer.razor
@@ -151,7 +151,7 @@ If it can't find any content, it shows an h1 saying no content.
 	}
 
 	<KeyboardShortcuts AltLeft="@(() => ChangeItem("Left"))" 
-		AltRight="@(() => ChangeItem("Right"))" CtrlD="@DelOrCtrDFired" Del="@DelOrCtrDFired" CtrlE="@(() => F.VisToggle(ref editDateDivVis))"
+		AltRight="@(() => ChangeItem("Right"))" CtrlE="@(() => F.VisToggle(ref editDateDivVis))"
 		Esc="@(() => ChangeItem("Esc"))" I="@(() => { F.VisToggle(ref infoVis); StateHasChanged(); })" AltF="@(() => { F.VisToggle(ref editFilenameDivVis); StateHasChanged(); })"/>
 }
 else
