--- a/PSS/PSS/Pages/Starred.razor
+++ b/PSS/PSS/Pages/Starred.razor
@@ -6,7 +6,7 @@
 @{
     <header>
         <div id="buttons" style="visibility: @headerVis">
-            <button class="iconBtn"><a style="text-decoration: none" class="material-icons-outlined" @onclick="@libContentViewer.DownloadSelected" href="@S.TMP_REQUEST_PATH/@libContentViewer.ZipFilename" download="@libContentViewer.ZipFilename">file_download</a></button>
+            <button class="iconBtn"><span class="material-icons-outlined" @onclick="@libContentViewer.DownloadSelected">file_download</span></button>
             <button class="iconBtn" @onclick="@(() => F.VisToggle(ref collectionsVis))"><span class="material-icons-outlined">collections</span></button>
             <button class="iconBtn" title="Remove Stars From Selected" @onclick="@(() => libContentViewer.UpdateStars(false))"><span class="material-icons-outlined">star_outline</span></button>
             <button class="iconBtn" @onclick="@libContentViewer.DeleteBtnClick"><svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
