--- a/PSS/PSS/wwwroot/css/components/LibraryContentViewer.css
+++ b/PSS/PSS/wwwroot/css/components/LibraryContentViewer.css
@@ -110,3 +110,44 @@ h1 {
     z-index: 800;
     bottom: -200px;
 }
+
+#downloadDivBackground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(72, 71, 71, 0.41);
+}
+
+#downloadDivBackground > #downloadDiv {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    width: 200px;
+    height: 200px;
+    background-color: black;
+    border: 2px solid white;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    word-wrap: break-word;
+}
+
+#downloadDivBackground > #downloadDiv > a {
+    text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    user-select: none;
+}
+
+#downloadDivBackground > #downloadDiv > button {
+    position: absolute;
+    bottom: 4px;
+    right: 4px;
+}
