--- a/PSS/PSS/wwwroot/css/components/ShortcutsReference.css
+++ b/PSS/PSS/wwwroot/css/components/ShortcutsReference.css
@@ -1,6 +1,6 @@
 #reference {
     width: 230px;
-    height: 230px;
+    min-height: 230px;
     z-index: 9999;
     position: absolute;
     left: 50%;
@@ -38,7 +38,7 @@
 #reference > #allShortcuts > .shortcut > code {
     display: inline-block;
     text-align: right;
-    width: 45px;
+    background-color: rgba(211, 211, 211, 0.2);
 }
 
 #reference > #allShortcuts > .shortcut > span {
