--- a/PSS/PSS/Shared/ShortcutsReference.razor
+++ b/PSS/PSS/Shared/ShortcutsReference.razor
@@ -1,120 +1,122 @@
 @* Overlay thing for showing all the shortcuts in PSS *@
 <link href="/css/components/ShortcutsReference.css" rel="stylesheet">
 
-<div id="reference" style="visibility: @visibility">
-    <div id="header">
-        <span>Keyboard Shortcuts</span>
-    </div>
-
-    <div id="allShortcuts">
-        <div class="shortcut">
-            <code>Ctrl /</code>
-            <span>Shows this</span>
+<div id="referenceBackground" style="visibility: @visibility">
+    <div id="reference">
+        <div id="header">
+            <span>Keyboard Shortcuts</span>
         </div>
-        
-        @if (IText != null)
-        {
+
+        <div id="allShortcuts">
             <div class="shortcut">
-                <code>I</code>
-                <span>@IText</span>
+                <code>Ctrl /</code>
+                <span>Shows this</span>
             </div>
-        }
-        
-        @if (DelText != null)
-        {
-            <div class="shortcut">
-                <code>Del</code>
-                <span>@DelText</span>
-            </div>
-        }
-        
-        @if (EscText != null)
-        {
-            <div class="shortcut">
-                <code>Esc</code>
-                <span>@EscText</span>
-            </div>
-        }
-        
-        @if (LeftText != null)
-        {
-            <div class="shortcut">
-                <code>Left</code>
-                <span>@LeftText</span>
-            </div>
-        }
-        
-        @if (RightText != null)
-        {
-            <div class="shortcut">
-                <code>Right</code>
-                <span>@RightText</span>
-            </div>
-        }
-        
-        @if (CtrlDText != null)
-        {
-            <div class="shortcut">
-                <code>Ctrl D</code>
-                <span>@CtrlDText</span>
-            </div>
-        }
-        
-        @if (CtrlEText != null)
-        {
-            <div class="shortcut">
-                <code>Ctrl E</code>
-                <span>@CtrlEText</span>
-            </div>
-        }
-        
-        @if (CtrlGText != null)
-        {
-            <div class="shortcut">
-                <code>Ctrl G</code>
-                <span>@CtrlGText</span>
-            </div>
-        }
-        
-        @if (AltFText != null)
-        {
-            <div class="shortcut">
-                <code>Alt F</code>
-                <span>@AltFText</span>
-            </div>
-        }
-        
-        @if (AltAText != null)
-        {
-            <div class="shortcut">
-                <code>Alt A</code>
-                <span>@AltAText</span>
-            </div>
-        }
-        
-        @if (AltSText != null)
-        {
-            <div class="shortcut">
-                <code>Alt S</code>
-                <span>@AltSText</span>
-            </div>
-        }
-        
-        @if (AltLeftText != null)
-        {
-            <div class="shortcut">
-                <code>Alt Left</code>
-                <span>@AltLeftText</span>
-            </div>
-        }
-        
-        @if (AltRightText != null)
-        {
-            <div class="shortcut">
-                <code>Alt Right</code>
-                <span>@AltRightText</span>
-            </div>
-        }
+            
+            @if (IText != null)
+            {
+                <div class="shortcut">
+                    <code>I</code>
+                    <span>@IText</span>
+                </div>
+            }
+            
+            @if (DelText != null)
+            {
+                <div class="shortcut">
+                    <code>Del</code>
+                    <span>@DelText</span>
+                </div>
+            }
+            
+            @if (EscText != null)
+            {
+                <div class="shortcut">
+                    <code>Esc</code>
+                    <span>@EscText</span>
+                </div>
+            }
+            
+            @if (LeftText != null)
+            {
+                <div class="shortcut">
+                    <code>Left</code>
+                    <span>@LeftText</span>
+                </div>
+            }
+            
+            @if (RightText != null)
+            {
+                <div class="shortcut">
+                    <code>Right</code>
+                    <span>@RightText</span>
+                </div>
+            }
+            
+            @if (CtrlDText != null)
+            {
+                <div class="shortcut">
+                    <code>Ctrl D</code>
+                    <span>@CtrlDText</span>
+                </div>
+            }
+            
+            @if (CtrlEText != null)
+            {
+                <div class="shortcut">
+                    <code>Ctrl E</code>
+                    <span>@CtrlEText</span>
+                </div>
+            }
+            
+            @if (CtrlGText != null)
+            {
+                <div class="shortcut">
+                    <code>Ctrl G</code>
+                    <span>@CtrlGText</span>
+                </div>
+            }
+            
+            @if (AltFText != null)
+            {
+                <div class="shortcut">
+                    <code>Alt F</code>
+                    <span>@AltFText</span>
+                </div>
+            }
+            
+            @if (AltAText != null)
+            {
+                <div class="shortcut">
+                    <code>Alt A</code>
+                    <span>@AltAText</span>
+                </div>
+            }
+            
+            @if (AltSText != null)
+            {
+                <div class="shortcut">
+                    <code>Alt S</code>
+                    <span>@AltSText</span>
+                </div>
+            }
+            
+            @if (AltLeftText != null)
+            {
+                <div class="shortcut">
+                    <code>Alt Left</code>
+                    <span>@AltLeftText</span>
+                </div>
+            }
+            
+            @if (AltRightText != null)
+            {
+                <div class="shortcut">
+                    <code>Alt Right</code>
+                    <span>@AltRightText</span>
+                </div>
+            }
+        </div>
     </div>
 </div>
 
