--- a/PSS/PSS/Shared/LibraryContentViewer.razor
+++ b/PSS/PSS/Shared/LibraryContentViewer.razor
@@ -166,6 +166,7 @@ else
 	<CtrlGInput @ref=@ctrlGInput StartDateChanged="@StartDateChanged"/>
 }
 <KeyboardShortcuts AltS="@AltSFired" CtrlD="@DelOrCtrDFired" Del="@DelOrCtrDFired"/>
+<ShortcutsReference DelText="Delete Selected Item(s)" CtrlDText="Delete Selected Item(s)" AltAText="Show/Hide CollectionSelector" AltSText="Add/Remove Star to Selected Item(s)"/>
 
 @code{
 	CtrlGInput ctrlGInput;
