--- a/PSS/PSS/Shared/KeyboardShortcuts.razor
+++ b/PSS/PSS/Shared/KeyboardShortcuts.razor
@@ -41,6 +41,9 @@
 	public Action AltA { get; set; }
 
 	[Parameter]
+	public Action AltC { get; set; }
+
+	[Parameter]
 	public Action AltS { get; set; }
 
 	[Parameter]
@@ -63,6 +66,7 @@
 		if (CtrlSlash != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.Slash, CtrlSlash);
 		if (AltF != null) HotKeysContext.Add(ModKeys.Alt, Keys.F, AltF);
 		if (AltA != null) HotKeysContext.Add(ModKeys.Alt, Keys.A, AltA);
+		if (AltC != null) HotKeysContext.Add(ModKeys.Alt, Keys.C, AltC);
 		if (AltS != null) HotKeysContext.Add(ModKeys.Alt, Keys.S, AltS);
 		if (AltLeft != null) HotKeysContext.Add(ModKeys.Alt, Keys.Left, AltLeft);
 		if (AltRight != null) HotKeysContext.Add(ModKeys.Alt, Keys.Right, AltRight);
