--- a/PSS/PSS/Pages/Index.razor
+++ b/PSS/PSS/Pages/Index.razor
@@ -21,7 +21,7 @@
         FirstQuery="SELECT path, date_taken, date_added, starred, uuid, thumbnail FROM media WHERE separate = false AND date_deleted IS NULL AND date_taken IS NOT NULL ORDER BY date_taken DESC LIMIT 50"/>
     
     <CollectionSelector SelectedItem="@libContentViewer.SelectedItem" SelectedItems="@libContentViewer.SelectedItems" @bind-HeaderVis="@headerVis" @bind-CollectionsVis="@collectionsVis"/>
-    <KeyboardShortcuts AltA="@(() => { F.VisToggle(ref collectionsVis); StateHasChanged(); })" />
+    <KeyboardShortcuts AltC="@(() => { F.VisToggle(ref collectionsVis); StateHasChanged(); })" />
 }
 
 @code {
