--- a/PSS/PSS/Pages/UploadApply.razor
+++ b/PSS/PSS/Pages/UploadApply.razor
@@ -9,7 +9,7 @@
         <span class="material-icons-outlined">filter_list</span><span>Filter Items</span>
     </button>
 
-    <button class="textBtn" @onclick="AddItems">
+    <button class="textBtn" @onclick="@AddItemsBtnClick">
         <span class="material-icons-outlined">add_photo_alternate</span><span>Add to Library</span>
     </button>
 
@@ -32,9 +32,10 @@
 </div>
 
 <TwoChoiceInput TwoChoiceVis="@promptVis" YesBtnClick="@DeleteErrors" NoBtnClick="@(() => { promptVis = "hidden"; StateHasChanged(); })" Message="@message"/>
+<TwoChoiceInput TwoChoiceVis="@addItemsPromptVis" YesBtnClick="@(() => { addItemsPromptVis = "hidden"; StateHasChanged(); AddItems(); })" NoBtnClick="@(() => { addItemsPromptVis = "hidden"; StateHasChanged(); })" Message="Add All Items to Your Library and Any Album(s)/Folder?"/>
 <CollectionSelector @ref="@collectionSelector" CollectionsVis="@collectionSelectorVis" SelectedItems="@allGuids" ShowCheckCancelButtons="false"/>
 
-<KeyboardShortcuts AltA="@AddItems" AltC="@(() => { F.VisToggle(ref collectionSelectorVis); StateHasChanged(); })" AltF="@(() => { F.VisToggle(ref filterVis); StateHasChanged(); })" CtrlD="@DeleteErrors" />
+<KeyboardShortcuts AltA="@AddItemsBtnClick" AltC="@(() => { F.VisToggle(ref collectionSelectorVis); StateHasChanged(); })" AltF="@(() => { F.VisToggle(ref filterVis); StateHasChanged(); })" CtrlD="@DeleteErrors" />
 <ShortcutsReference AltAText="Add Items to Library and Album(s)/Folder" AltCText="Show/Hide CollectionSelector" AltFText="Show/Hide Filter" CtrlDText="Delete All Items with Errors"/>
 
 @{
@@ -81,7 +82,7 @@
     private static List<C.UploadFile> allFiles;
 
     private static string status;
-    private static string promptVis;
+    private static string promptVis, addItemsPromptVis;
     private static string message;
     
     //Filtering
@@ -113,12 +114,8 @@
             allFiles.Add(file);
         });
     
-        promptVis = "hidden";
-        filterVis = "hidden";
-        collectionSelectorVis = "hidden";
-        neitherChecked = false;
-        warningChecked = false;
-        errorChecked = false;
+        promptVis = addItemsPromptVis = filterVis = collectionSelectorVis ="hidden";
+        neitherChecked = warningChecked = errorChecked = false;
         infoChecked = true;
         UpdateStatus();
     }
@@ -140,6 +137,17 @@
         }
         promptVis = "hidden";
         StateHasChanged();
+    }
+
+    private void AddItemsBtnClick()
+    {
+        if (S.showPrompts == false)
+            AddItems();
+        else
+        {
+            addItemsPromptVis = "visible";
+            StateHasChanged();
+        }
     }
 
     //Adds all the items to photo library, and, if applicable, any album(s) or folder.
