--- a/PSS/PSS/wwwroot/css/components/LibraryContentViewer.css
+++ b/PSS/PSS/wwwroot/css/components/LibraryContentViewer.css
@@ -17,19 +17,25 @@ h1 {
     top: 60px;
 }
 
-#libContentViewer > .thumbnail > .star-icon {
+#libContentViewer > .row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#libContentViewer > .row > .thumbnail > .star-icon {
     position: absolute;
     left: 8px;
     bottom: 10px;
 }
 
-#libContentViewer > .thumbnail > .video-icon {
+#libContentViewer > .row > .thumbnail > .video-icon {
     position: absolute;
     right: 8px;
     top: 10px;
 }
 
-#libContentViewer > .thumbnail > .checkbox {
+#libContentViewer > .row > .thumbnail > .checkbox {
     opacity: 0;
     position: absolute;
     margin-top: 8px;
@@ -37,32 +43,32 @@ h1 {
     transition: 0.3s;
 }
 
-#libContentViewer > .thumbnail:hover > .unchecked { /* Show checkbox on hover */
+#libContentViewer > .row > .thumbnail:hover > .unchecked { /* Show checkbox on hover */
     opacity: 0.42;
 }
 
-#libContentViewer > .thumbnail > .unchecked:hover { /* Make it 100% opaque */
+#libContentViewer > .row > .thumbnail > .unchecked:hover { /* Make it 100% opaque */
     opacity: 1;
 }
 
-#libContentViewer > .thumbnail > .checked {
+#libContentViewer > .row > .thumbnail > .checked {
     color: #009FFF;
     opacity: 1;
 }
 
-#libContentViewer > .thumbnail > img {
+#libContentViewer > .row > .thumbnail > img {
     height: 200px;
     margin-left: 3px;
     margin-right: 3px;
     margin-top: 3px;
 }
 
-#libContentViewer > .thumbnail {
+#libContentViewer > .row > .thumbnail {
     position: relative; /* https://stackoverflow.com/a/12365963 */
     cursor: pointer;
 }
 
-#libContentViewer > .thumbnail > .checkbox {
+#libContentViewer > .row > .thumbnail > .checkbox {
     opacity: 0;
     position: absolute;
     margin-top: 8px;
@@ -70,20 +76,20 @@ h1 {
     transition: 0.3s;
 }
 
-#libContentViewer > .thumbnail:hover > .unchecked { /* Show checkbox on hover */
+#libContentViewer > .row > .thumbnail:hover > .unchecked { /* Show checkbox on hover */
     opacity: 0.42;
 }
 
-#libContentViewer > .thumbnail > .unchecked:hover { /* Make it 100% opaque */
+#libContentViewer > .row > .thumbnail > .unchecked:hover { /* Make it 100% opaque */
     opacity: 1;
 }
 
-#libContentViewer > .thumbnail > .checked {
+#libContentViewer > .row > .thumbnail > .checked {
     color: #009FFF;
     opacity: 1;
 }
 
-#libContentViewer > .thumbnail > img {
+#libContentViewer > .row > .thumbnail > img {
     height: 200px;
     margin-left: 3px;
     margin-right: 3px;
