--- a/PSS/PSS/Shared/NavMenu.razor
+++ b/PSS/PSS/Shared/NavMenu.razor
@@ -32,7 +32,7 @@
     <a href="/"><span class="material-icons-outlined">home</span><span>Home</span></a>
     <a href="collections"><span class="material-icons-outlined">&#xe411;</span><span>Collections</span></a>
     <a href="upload"><span class="material-icons-outlined">&#xe2c3;</span><span>Upload</span></a>
-    <a href="starred"><span class="material-icons-outlined">&#xf06f;</span><span>Starred</span></a>
+    <a href="starred"><span class="material-icons">star</span><span>Starred</span></a>
     <a href="no-dt"><span class="material-icons-outlined">help_outline</span><span>No DT</span></a>
     <a href="memories"><span class="material-icons-outlined">history</span><span>Memories</span></a>
     <a href="search"><span class="material-icons-outlined">&#xe8b6;</span><span>Search</span></a>
